# confectioner

./: .buildinfo  .bumpversion.cfg  .pre-commit-config.yaml  README.md  api.html  changelog.html  contributing.html  coverage.xml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: build-and-deploy.yml  build.yml  docs.yml  publish.yml  test.yml
_sources/: changelog.md.txt  index.rst.txt  installation.md.txt
confectioner/: __init__.py  baker.py  core.py  exceptions.py  files.py  templating.py
docs/source/: api.rst  conf.py  contributing.md  usage.md
tests/: conftest.py  test_baker.py  test_core.py  test_exceptions.py  test_files.py  test_templating.py
tests/data/: recipe.yml
tests/data/else/: recipe.yml
tests/data/formatting/: recipe.yml
tests/data/meals/: burger.yml  salad.yml
tests/data/pantry/: bun.json  dressing.json  easy-mac.json  jalepenos.json  lettuce.json  patty.json  soda.json  toppings.json  water.json  wine.json
